Add sms channel and template operation log